--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 .second-section {
     display: flex;
     margin-top: 7%;
-    width:
+
 
 }
 
@@ -89,3 +89,114 @@ body {
 }
 
 /* <!-- First Donation section end --> */
+.third-section {
+    text-align: center;
+    margin: 7%;
+}
+
+.third-container h1 {
+    font-size: 60px;
+}
+
+.third-container p {
+    font-size: 20px;
+    margin-top: 30px;
+    color: gray;
+
+
+
+}
+
+.forth-section {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.forth-section img {
+    background-color: antiquewhite;
+    height: 500px;
+    width: 100%;
+}
+
+.para {
+    margin-left: 2%;
+    width: 300px;
+}
+
+.fifth-section {
+    display: flex;
+
+}
+
+.fifth-section img {
+    width: 100%;
+    height: 100%;
+    padding: 7% 5%;
+    border-radius: 7%;
+
+}
+
+.img-width {
+    margin-left: 1%;
+    border-radius: 50%;
+}
+
+/* loveing-part start */
+.love-section {
+    display: flex;
+    margin: 2% 5%;
+
+}
+
+.border-align {
+    margin-left: 4%;
+    border: 1px solid rgb(173, 166, 166);
+    border-radius: 4%;
+}
+
+
+.love-section img {
+    width: 100%;
+}
+
+.love-section h1 {
+    padding-top: 2%;
+    padding-left: 4%
+}
+
+
+
+.love-section p {
+    width: 384px;
+    font-size: 17px;
+    color: gray;
+    padding-left: 4%
+}
+
+.donate-btn {
+    color: #ef233c;
+    margin-bottom: 25px;
+    font-size: 20px;
+    padding-left: 4%
+}
+
+
+footer {
+    text-align: center;
+    background-color: black;
+    color: #ef233c;
+    height: 20%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+footer h1 {
+    font-size: 40px;
+    font-family: 'Lobster', cursive;
+
+}
+
+footer p {
+    color: white;
+}
