--- a/style.css
+++ b/style.css
@@ -183,10 +183,11 @@ body {
 
 
 footer {
+    margin-top: 10%;
     text-align: center;
     background-color: black;
     color: #ef233c;
-    height: 20%;
+    height: 5%;
     padding-top: 5%;
     padding-bottom: 5%;
 }
